@@ -2,6 +2,12 @@
 # Copyright 2006-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh:
+  Since device-mapper tries to build with selinux by default, we've removed
+  it, then commented out the selinux support. The ebuild will need to
+  enable/disable selinux support based on the selinux USE flag. This should
+  resolve bug #157538.
+
   13 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   generic/initrd.scripts:
   More fixes for similarly-named modules.
